﻿8.2.0 (next)
------------------
+ [enhancement [fj-core] conversion utilities for ConfigException and ConfigRuntimeException [8.2.0-rc.3]
+ [enhancement [to reduce hierarchy depth, if the correct interfaces have been used, this should have no impact] :
+ [enhancement][fj-core] Changed hierarchy of GenericListCatalogConfig to directly extends AbstractConfigurableObject [8.2.0-rc.1]
+ [enhancement][fj-core] Changed hierarchy of AbstractConfigurableObject to directly extends Object [8.2.0-rc.1]

8.1.0 (2023-08-20)
------------------
+ [enhancement][fj-core] Added factory methods for XMLConfigurableObject [8.1.0-rc.2]
+ [enhancement][fj-core] Facilities for converting exceptions [8.1.0-rc.1]
+ [enhancement][fj-lib] [added sonar cloud quality gate](https://github.com/fugerit-org/fj-lib/issues/21) [8.1.0-rc.1]

8.0.13 (2023-08-01)
------------------
+ Added accessor for ConfigProvider in AbstractConfigurableObject

8.0.12-rc.001 (2023-07-31)
------------------
+ Fixed MiniFilterConfig load compatibility

8.0.11-rc.002 (2023-07-14)
------------------
+ Added MiniFilterMap
+ Updated bom to 1.2.3

8.0.9 (2023-03-29)
------------------
+ Parameter set in DAOHelper set to TRACE

8.0.8 (2023-03-29)
------------------
+ Improved DAOUtilsNG debugging

8.0.7 (2023-03-29)
------------------
+ Further improved BasicDAOHelper debugging

8.0.5 (2023-03-28)
------------------
+ Improved BasicDAOHelper debugging

8.0.4 (2023-03-26)
------------------
+ changed fj-bom version to 1.0.0
+ [As for the new parent version, building should be done using java11+](https://github.com/fugerit-org/fj-bom/issues/11)
+ maven.compiler.release property set to '8' (so the project is still compatible with java8+)
+ Introduced project lombok

8.0.3 (2023-03-25)
------------------
+ [j2ee dependant api deprecation](https://github.com/fugerit-org/fj-lib/issues/19)
+ changed fj-bom version to 0.2.3
+ changed inner dependancy of submodules from project.version to fj-version

8.0.2 (2023-03-25)