@@ -1,5 +1,6 @@
 package org.fugerit.java.core.io.helper;
 
+import java.io.Closeable;
 import java.io.IOException;
 
 import org.fugerit.java.core.lang.ex.ExConverUtils;
@@ -24,6 +25,28 @@ public class HelperIOException {
 	
 	public static IOException convertEx( Exception e ) {
 		return convertEx( ExConverUtils.DEFAULT_CAUSE_MESSAGE, e );
+	}
+	
+	private static final String BASIC_CLOSE_MESSAGE = "Error closing object : ";
+	
+	public static void close( AutoCloseable ac ) throws IOException {
+		if ( ac != null ) {
+			try {
+				ac.close();
+			} catch (Exception e) {
+				throw HelperIOException.convertEx( BASIC_CLOSE_MESSAGE+ac , e );
+			}
+		}
+	}
+	
+	public static void close( Closeable ac ) throws IOException {
+		if ( ac != null ) {
+			try {
+				ac.close();
+			} catch (Exception e) {
+				throw HelperIOException.convertEx( BASIC_CLOSE_MESSAGE+ac , e );
+			}
+		}
 	}
 	
 }
