@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.fugerit.java</groupId>
 		<artifactId>fj-lib</artifactId>
-		<version>8.2.0-rc.3</version>
+		<version>8.2.0-rc.4</version>
 	</parent>
 	
 	<name>fj-tool</name>
