@@ -11,7 +11,7 @@
 		<relativePath></relativePath>
 	</parent>
 
-	<version>8.2.0-rc.3</version>
+	<version>8.2.0-rc.4</version>
 	<packaging>pom</packaging>
 
 	<name>fj-lib</name>
